# TRACE

./: pyproject.toml
model/: base_model.py
model/Dynamic_network/: PP.py
scripts/: infer_lora.sh  infer_seq.sh  train_lora.sh  train_replay.sh  train_seq_cl.sh  train_seq_naive.sh
training/: main.py
utils/: ds_utils.py  utils.py
utils/data/: data_collator.py  data_utils.py
utils/flash_attention/: bloom_flash_att.py  llama_flash_att.py
utils/model/: model_utils.py
