[project]
name = "trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "tokenizers>=0.19",
    "transformers>=4.36.0",
    "datasets>=2.8.0",
    "pyarrow<13.0.0",
    "numpy<2",
    "sentencepiece>=0.1.97",
    "accelerate>=0.15.0",
    "deepspeed>=0.9.0",
    "huggingface-hub>=0.19.0",
    "ninja==1.11.1",
    "tensorboard==2.14.0",
    "tensorboard-data-server==0.7.1",
    "Jinja2==3.1.2",
    "multiprocess==0.70.15",
    "networkx==3.1",
    "nltk==3.5",
    "rouge==1.0.1",
    "fuzzywuzzy",
    "quadprog",
    "peft",
    "rouge",
    "qpth",
    "sacrebleu",
    "sacremoses",
    "python-levenshtein>=0.27.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

